# stars-vs-galaxies

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.dvc/: config
stars_galaxies/: .pre-commit-config.yaml  commands.py
stars_galaxies/configs/: config.yaml  train.yaml
stars_galaxies/configs/data/: data_config.yaml
stars_galaxies/data/: datamodule.py  download_data.py  raw.dvc
stars_galaxies/infer/: infer_onnx.py  log_mlflow_model.py  mlflow_model.py
stars_galaxies/models/: model.py
stars_galaxies/training/: train.py
